# fin-radar

./: README.md  package-lock.json  package.json  vite.config.js
src/: app.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: AddTransactionForm.svelte  Alert.svelte  AuthScreen.svelte  Calendar.svelte  ChangePwModal.svelte  LoginForm.svelte  RecoveryScreen.svelte  RegistrationForm.svelte  SettingsBanner.svelte
src/lib/: alert.ts  functions.ts  i18n.ts  transactions.ts  types.ts  user.ts  viewStore.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/transactions-table/: +page.svelte
