[package]
name = "fin-radar"
version = "0.1.0"
description = "A finance tracker"
authors = ["Stenberg-N"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
argon2 = { version = "=0.6.0-rc.7", features = ["getrandom"] }
dirs = "6.0.0"
time = { version= "0.3.47", features = ["local-offset"] }
log = "0.4.29"
rand = "0.10.0"
